--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <li class="top-bar-items">info@apexinternationalschool.org</li>
             </ul>
           </div>
-          <div class="social-icon" style="margin-left:800px">
+          <div class="social-icon">
             <ul class="social-icon-list">
               <li class="icon-list"><i class="fa-brands fa-facebook-f" style="color: #c7ccd6;"></i></li>
               <li class="icon-list"><i class="fa-brands fa-youtube" style="color:c7ccd6"></i></li>
@@ -31,7 +31,7 @@
         <nav class="navbar-items">
           <div>
             <a class="navbar-brand" href="#">
-              <img class="nav-logo" src="https://apexinternationalschool.org/img/logos/logo.png" alt="" width="350" height="60">
+              <img style="margin-right:px" class="nav-logo" src="https://apexinternationalschool.org/img/logos/logo.png" alt="" width="200px" height="60px">
             </a>
           </div>
           <div class="nav-items">
@@ -112,13 +112,14 @@
 
    <div class="container" id="about-school">
     <div class="row">
+      <center><h6 style="color:red">Apex International School</h6>
+      <h4 style="color:#292961">THE SCHOOL WITH INTERNATIONAL<br> STANDARD</h4></center>
       <div class="col">
-        <h6 style="color:red">Apex International School</h6>
-      <h4 style="color:#292961">THE SCHOOL WITH INTERNATIONAL<br> STANDARD</h4>
+       
       <p style="color:#999;">Apex International school is a secondary school affiliated to CBSE, Delhi, established in the year 2005. It is situated at Odumbra, in Olavanna Panchayath, Calicut. The school is located in a sprawling 3 acre green campus, 1.5 km from mini bye-pass. It is a co-educational institution caters to students from K.G to Std X. The mission of the school is to Promote Education that builds the fundamental characters such as honesty, compassion, courage, persistence and responsibility. The management envisage a completely different school with personalized care to develop intellectual and social skills. The school is an extension of family where we bring out the best out of the students with the partnership of parents. School give importance to, brotherhood, physical well-being and hygiene and inculcate civic sense among students. Training in co-curricular activities is given to every child focusing on the holistic development of the child. The school want students to enjoy every moment of their stay at school and create a love for learning and develop a sense of self esteem.</p>
       </div>
       <div class="col">
-        <iframe style="margin-top:100px" width="600" height="315" src="https://www.youtube.com/embed/s3l7IsnY_jk?si=1ikSQJnkopJBaJoL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe style="margin-top:35px" width="600" height="315" src="https://www.youtube.com/embed/s3l7IsnY_jk?si=1ikSQJnkopJBaJoL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
      </div> 
      </div>
@@ -128,7 +129,7 @@
       </center>
       <div class="row">
         <div class="col">
-          <div class="card" style="width: 22rem;margin-left:325px;margin-top:50px">
+          <div class="card" style="width:20rem;margin-top:50px;margin-left:80px">
             <img src="https://www.apexinternationalschool.org/img/content/services/chess.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Chess</h5>
@@ -139,7 +140,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="width: 22rem;margin-left:95px;margin-top:50px">
+          <div class="card" style="width: 20rem;margin-top:50px">
             <img src="https://www.apexinternationalschool.org/img/content/services/claymodeling.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Clay Modeling Competition</h5>
@@ -150,7 +151,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="width: 22rem;margin-top:50px;margin-right:300px">
+          <div class="card" style="width: 20rem;margin-top:50px">
             <img src="https://www.apexinternationalschool.org/img/content/services/skiting.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Skating</h5>
@@ -165,7 +166,7 @@
     </div>
     
     <div>
-      <h1 style="margin-left:350px;margin-top:50px">Come learn,explore and play at Apex International School this <br>Summer! </h1>
+      <h1 style="margin-left:180px;margin-top:50px">Come learn,explore and play at Apex International School this <br>Summer! </h1>
       <div class="container" style="margin-top:30px">
         <div class="row">
           <div class="col">
@@ -195,8 +196,8 @@
        <center><h6 style="color:red">Share your Academy pride with the world</h6>
         <h1>See our full social stream here!</h1>
       </center>
-      <div class="social-div" style="margin-left:400px;margin-top:50px">
-         <div style="margin-right:120px">
+      <div class="social-div" style="margin-left:200px;margin-top:50px">
+         <div style="margin-right:60px">
           <div>
             <img height="180" width="380px" src="https://scontent.fcok10-2.fna.fbcdn.net/v/t39.30808-6/305204466_448400883975444_3226849528801066813_n.jpg?stp=dst-jpg_p280x280&_nc_cat=109&ccb=1-7&_nc_sid=4cb600&_nc_ohc=euh8KisR-uAQ7kNvgE8Txbc&_nc_ht=scontent.fcok10-2.fna&edm=ADwmN6EEAAAA&oh=00_AYB0MPw5hFQLctIOv9GaTM8YC8qqHczrGj7Vq06zMVSldQ&oe=66A5517E"></img>
           </div>
